--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -3,7 +3,8 @@
     <!--
      * Main
      -->
-    <string id="30000">Videos</string>
+    <string id="30000">Hardware.Info Tv</string>
+	<string id="30001">Losse Items</string>
 
     <!-- 
      * Settings labels 
@@ -31,5 +32,6 @@
 	<string id="30503">Next page</string>
 	<string id="30504">Getting video location...</string>
 	<string id="30505">No video found.</string>
-	<string id="30506">No media found for:</string>
+	<string id="30506">Error playing media file.</string>
+	<string id="30507">Error getting page: %s</string>
 </strings>
