--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -3,8 +3,7 @@
     <!--
      * Main
      -->
-    <string id="30000">Hardware.Info Tv</string>
-	<string id="30001">Losse Items</string>
+    <string id="30000">Hardware.Info TV</string>
 
     <!-- 
      * Settings labels 
