--- a/changelog.txt
+++ b/changelog.txt
@@ -12,3 +12,4 @@ v1.0.2 (Wednesday, 3 July 2013) :
 - using hi res background
 - using different icon
 - added beautiful soup as dependency
+- added dutch strings
