--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+v1.0.6-SNAPSHOT (2016-06-05)
+- changed addon debugging info to kodi debugging info
+- using po-files
+
 v1.0.5 (2016-03-12) :
 - changed the listing and playing of videos
 - the contextual menu item 'Play from here' is available now, it queues all the videos in the list from a certain point
