--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
-v1.0.6-SNAPSHOT (2016-06-05)
+v1.0.6 (2017-03-12) :
 - changed addon debugging info to kodi debugging info
 - using po-files
+- fixed url in addon.xml as per request
+- changed text from xbmc to kodi
 
 v1.0.5 (2016-03-12) :
 - changed the listing and playing of videos
