--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -43,6 +43,14 @@ msgctxt "#30102"
 msgid "Website"
 msgstr ""
 
+msgctxt "#30104"
+msgid "Refresh"
+msgstr ""
+
+msgctxt "#30105"
+msgid "Episode Info"
+msgstr ""
+
 msgctxt "#30200"
 msgid "Video player"
 msgstr ""
