--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+v1.0.8-SNAPSHOT (2017-08-05)
+- fixed escaped ampersand in title
+
 v1.0.7 (2017-07-12)
 - added listitem.setInfo video for Kodi 18 and up
 - added sorting
