--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,8 @@
-v1.0.8-SNAPSHOT (2017-12-03)
-- addon now works in kode python 2 and also 3 (!!) thanks to the future project
-- addon.xml contains NOT YET SUPPORTED python3 tag
+v1.0.8 (2018-01-20) :
+- addon now works in kode python 2 and should also work in python 3 (!!) once all dependencies work in python 3.
+Kudo's to the python future package for making this possible. Kudo's to RomanVM for the help.
 
-v1.0.7 (2017-07-12)
+v1.0.7 (2017-07-12) :
 - added listitem.setInfo video for Kodi 18 and up
 - added sorting
 - added context item episode info
